WebHW_Test/Pages/Dashboard/chart.css
 .card {
    width: calc(100%-30px);
    padding: 15px;
    height: 610px;
    position: relative;
  }
  
  .card::before,
  .card::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 10px;
  }
  
  .card::before {
    z-index: 1;
    transform: translate(-30px, -30px);
  }
  
  .card::after {
    z-index: 2;
    background-color: #ffffff;
  }
  
  .card-content {
    position: relative;
    z-index: 3;
  }

